Update User Guide

--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -598,7 +598,7 @@ The String array of currently displayed phrases is updated upon every update ins
         ...
 ----
 
-The `smart` feature of the autocomplete feature in that it will display person names or indexes when certain commands are typed is implemented by concatenating resident names or indexes to the end of the search phrase. 
+The `smart` feature of the autocomplete feature in that it will display person names or indexes when certain commands are typed is implemented by concatenating resident names or indexes to the end of the search phrase.
 
 [source,java]
 ----
@@ -620,19 +620,12 @@ The `smart` feature of the autocomplete feature in that it will display person n
             ...
 ----
 
-==== Design Considerations
-
-**Alternatives Considered:**
-
-**Pros:** Much easier to implement and 
-**Cons:** This would also mean that it would be impossible for the application to be portable since the images could not be possibly be bundled together when the user wants to migrate the application to another platform.
-
 // end::autocomplete[]
 
 // tag::swaproom[]
-=== Swap Rooms Command
+=== Swap Room Command
 
-The swaproom command swaps the rooms of two residents specified with indexes.
+The `swaproom` command swaps the rooms of two residents specified with indexes.
 [source,java]
 ----
 public boolean equals(Object other) {
@@ -646,11 +639,18 @@ public boolean equals(Object other) {
 }
 ----
 
-In the method above is defined in `SwaproomCommand.java`. It is important to notw that two swaproom commands with their residents' indexes swapped are still equal to each other. For example the following commands are equal:
+The method above is defined in `SwaproomCommand.java`. It is important to note that two swaproom commands with their residents' indexes swapped are still equal to each other. For example the following commands are equal:
+
 * `swaproom 3 4`
 * `swaproom 4 3`
 
-Illegal arguments will raise a CommandException which will be displayed to the user in the command output box.
+The command has a alias `sr`. So, the following commands are equivalent:
+
+* `swaproom 3 4`
+* `sr 3 4`
+
+Illegal arguments such as non-integer arguments or integers bigger than the size of the last shown list will raise a `CommandException` which will be displayed to the user in the command output box.
+// end::swaproom[]
 
 // tag::highlight[]
 === Highlight Command
@@ -754,6 +754,10 @@ When creating a temporary person, users should input temp/ followed by the numbe
  i.e. "temp/2", without the quotation marks. The use of this temp/ prefix is optional. When temp/ is not used, a normal
  person which does not expire is created.
 
+The following activity diagram shows the process of adding a temporary person.
+
+image::AddTempPersonAD.png[width="700"]
+
 [NOTE]
 Due to the nature of this implementation, testing becomes tricky. One way to test is to add a temporary person, then forward system time
 by the more than the number of days that this person will expire. The temporary person should not appear in the ResidentBook now. Remember to
@@ -790,6 +794,10 @@ public void deleteTemporary() {
     }
 }
 
+The following activity diagram shows how temporary persons are deleted from the ResidentBook.
+
+image::DeleteTempPersonAD.png[width="700"]
+
 ==== Design Considerations
 
 **Aspect:** Implementation of temporary persons +
@@ -803,11 +811,31 @@ public void deleteTemporary() {
 
 
 // end::temporaryperson[]
+
+//tag::import[]
 === Import mechanism
 
-The import mechanism is essentially adding multiple contacts to the resident book automatically by referencing a xml file. It is implemented by calling add function repeatedly till all the new contacts have been added to the current contact list.
+The import mechanism is essentially adding multiple Residents to the ResidentBook and integrating the current data with an external xml file. It is implemented by calling add function repeatedly till all the new Residents have been added to the current ResidentBook.
 
-One consideration of this mechanism is that contacts with identical names will not be added as the current resident book is regarded as the most updated version and the import feature aims to only facilitate addition of new contacts.
+This command only import Residents and does not support adding of Events in v1.5.
+
+==== Design Considerations
+
+**Aspect:** Implementation of Import +
+**Alternative 1 (current choice):** Add all unique Residents currently not found in ResidentBook  +
+**Pros:** Removes redundancy and prevents duplication of data  +
+**Cons:** Current data will not be updated if there are exisiting Resident details in the ResidentBook +
+**Alternative 2:** Add all entries found on the file specified by user, and update the details when there is a difference +
+**Pros:** Get the most updated ResidentBook with each import +
+**Cons:** Import file may be outdated and not accurate, this results in inconsistency of data.
+
+The following is the Sequence Diagram for Import Command.
+
+image::SDforImportFile.png[width="800"]
+
+A button is also added onto the top bar menu to facilitate import via clicking and choosing file from FileChooser.
+
+image::import_file_Ui.png[width="800"]
 
 The Import Command is implemented this way, where user will specify the filePath:
 [source,java]
@@ -817,14 +845,267 @@ public ImportCommand(String filePath) {
 }
 ----
 
+It then goes through the data in the file and calls the add command repeatedly. If an exception is caught, it will continue and ignore that entry in the imported file. For every new Resident added, the name of the Resident is added to the list which keeps track of the new entries.
+[source,java]
+----
+private void addUniquePerson(ReadOnlyResidentBook newList, ArrayList<String> namesAdded) {
+        ObservableList<ReadOnlyPerson> personList = newList.getPersonList();
+
+        for (ReadOnlyPerson p : personList) {
+            try {
+                model.addPerson(p);
+            } catch (DuplicatePersonException e) {
+                continue;
+            }
+            namesAdded.add(p.getName().fullName);
+        }
+    }
+----
+
+The following method checks if there are any new Resident added to ResidentBook.
+[source,java]
+----
+private String getNamesFeedback(ArrayList<String> namesAdded) throws NoUniqueImport {
+        String namesFeedback = "";
+        if (namesAdded.size() == 0) {
+            throw new NoUniqueImport(MESSAGE_FILE_NOT_UNIQUE);
+        }
+
+        for (int i = 0; i < namesAdded.size(); i++) {
+            namesFeedback += namesAdded.get(i);
+
+            if (i + 1 != namesAdded.size()) {
+                namesFeedback += NAME_SEPERATOR;
+            }
+        }
+        return namesFeedback;
+    }
+----
+
 [NOTE]
 If the filePath is invalid, then there are no file that is readable and hence, an exception will be thrown. Users will be notified to check their filePath.
 
+If the data in the file specified is exactly the same as the current ResidentBook, there is nothing to import. The NoUniqueImport exception will be throw. Users will be notified to check their file.
+
+The following is the NoUniqueImport Exception:
+[source,java]
+----
+public class NoUniqueImport extends Exception {
+    public NoUniqueImport(String message) {
+        super(message);
+    }
+}
+----
+
 The following activity diagram summarize what happens inside the `ImportCommand` when a user executes this command:
 
-image::ImportCommandActivityDiagram.png[width="300"]
+image::ImportCommandActivityDiagram.png[width="500"]
 
-Future enhancements may include a selection option from the UI and allowing the users to specify if they would like to overwrite contacts with identical names.
+// end::import[]
+
+// tag::backup[]
+=== Backup Command
+The backup command saves the current ResidentBook into backup.xml located in the project location.
+
+==== Design Considerations
+
+**Aspect:** Implementation of Backup +
+**Alternative 1 (current choice):** Saves entire ResidentBook in a backup file  +
+**Pros:** Simple and straightforward in achieving objective of keeping another copy of ResidentBook  +
+**Cons:** Requires more storage space +
+**Alternative 2:** Allow user to specify which entries to be added to backup  +
+**Pros:** Flexible level of precision according to the needs of the user +
+**Cons:** User may miss some entries when specifying. Hard to roll back to the latest data during crisis
+
+One consideration for the chosen mechanism is that backup should aid during crisis, such as data corruption or lost. Hence, backing up the entire file is the safest choice for administrator staffs. The following function saves the ResidentBook and images.
+
+[source,java]
+----
+@Override
+    public void backupResidentBook(ReadOnlyResidentBook residentBook) throws IOException {
+        saveResidentBook(residentBook, getDirAbsolutePath() + backup_location);
+        backupImages();
+    }
+----
+
+Apart from the Resident details, Backup command also includes saving the images uploaded by user previously.
+
+[source,java]
+----
+public void backupImages() throws IOException {
+        String backupFolder = getDirAbsolutePath() + File.separator + Picture.FOLDER_NAME + "_backup";
+        String originalFolder = getDirAbsolutePath() + File.separator + Picture.FOLDER_NAME;
+
+        handleImageBackupFolder(backupFolder, originalFolder);
+        handleImagesBackupFiles(backupFolder, originalFolder);
+    }
+----
+
+Check is done to make sure that folder where images are saved exists before creating a backup folder. If the staff did not save any pictures for the Residents, no backup folder will be created.
+
+[source,java]
+----
+private void handleImageBackupFolder(String backupFolder, String originalFolder) throws IOException {
+        File source = new File(originalFolder);
+        if (source.exists()) {
+            boolean backupExist = new File(backupFolder).exists();
+
+            if (!backupExist) {
+                boolean isSuccess = (new File(backupFolder)).mkdirs();
+                if (!isSuccess) {
+                    throw new IOException();
+                }
+            }
+        }
+    }
+----
+
+If the staff saved images for the Residents, the images will be copied from the source folder to the backup folder as seen below.
+
+[source,java]
+----
+private void handleImagesBackupFiles(String backupFolder, String originalFolder) throws IOException {
+        File source = new File(originalFolder);
+
+        if (source.exists()) {
+            File[] listOfImages = source.listFiles();
+
+            for (int i = 0; i < listOfImages.length; i++) {
+                File dest = new File(backupFolder + File.separator + listOfImages[i].getName());
+                copy(listOfImages[i], dest);
+            }
+        }
+
+    }
+----
+
+The following is the activity diagram of Backup Comand.
+
+image::BackupCommandActivityDiagram.png[width="500"]
+
+For future enhancement, developers may consider allowing user to specify backup location and file name.
+
+// end::backup[]
+
+// tag::addEvent[]
+=== Add Event Command
+
+The `addevent` command adds an `Event` to the `EventBook`. The format for the current command is:
+
+`addevent ti/TITLE des/DESCRIPTION loc/LOCATION [time/STARTTIME TO ENDTIME or STARTTIME DURATION (in hours)]`
+
+If the event being added already exists in the EventBook, executing the `add event` command raises a `DuplicateEventException`:
+
+[source, java]
+----
+@Override
+public CommandResult executeUndoableCommand() throws CommandException {
+    requireNonNull(model);
+    try {
+        model.addEvent(toAdd);
+        return new CommandResult(String.format(MESSAGE_SUCCESS, toAdd));
+    } catch (DuplicateEventException e) {
+        throw new CommandException(MESSAGE_DUPLICATE_EVENT);
+    }
+}
+----
+
+
+Possible Future Implementations:
+
+* Allow tentative events for which the `Location` or `Datetime have not yet been finalised.
+* Allow adding events which span more than one day.
+
+// end::addEvent[]
+
+
+// tag::deleteEvent[]
+=== Delete Event Command
+
+The `deleteEvent` command deletes an `Event` from the `EventBook`. The format for the current command is:
+`deleteEvent INDEX (must be a positive integer)`
+
+If the index passed to the deleteEvent command as argument is greater than the number of events in the EventBook, a CommandException is raised on execution (in DeleteEventCommand.executeUndoableCommand()):
+
+[source, java]
+----
+    List<ReadOnlyEvent> lastShownList = model.getFilteredEventList();
+
+    if (targetIndex.getZeroBased() >= lastShownList.size()) {
+        throw new CommandException(Messages.MESSAGE_INVALID_EVENT_DISPLAYED_INDEX);
+    }
+----
+
+Possible Future Implementations:
+
+* Allow deleting events by `Title` or `Datetime`.
+* Allow batch deleting of events to clear old events with a single command.
+
+// end::deleteEvent[]
+
+
+// tag::switchtab[]
+=== Switch Tab Command
+
+The `switch tab` command allows users to switch between the Residents List and the Events lists from the Command Line Interface.
+
+The two possible commands are `switch 1` which switches to Residents List and `switch 2` switches to the Events List
+
+If an invalid argument such as `a` or `5` is passed with the switch command, a `ParseException` is raised:
+
+[source, java]
+----
+public SwitchTabCommand parse(String args) throws ParseException {
+    try {
+        int index = ParserUtil.parseIndex(args).getOneBased();
+
+        if (index > 2 || index < 1) {
+            throw new IllegalValueException(MESSAGE_INVALID_COMMAND_FORMAT);
+        }
+        return new SwitchTabCommand(index);
+    } catch (IllegalValueException ive) {
+        throw new ParseException(
+                String.format(MESSAGE_INVALID_COMMAND_FORMAT, SwitchTabCommand.MESSAGE_USAGE));
+    }
+}
+----
+
+Furthermore, if a `SwitchTabCommand` command is successfully made with invalid arguments by another class (such as when running tests), a `CommandException` will be raised when the command is executed:
+
+[source, java]
+----
+@Override
+public CommandResult execute() throws CommandException {
+
+    if (targetIndex > 2 || targetIndex < 1) {
+        throw new CommandException(MESSAGE_USAGE);
+    }
+
+    EventsCenter.getInstance().post(new SwitchTabRequestEvent(targetIndex));
+    return new CommandResult(String.format(MESSAGE_SWITCH_TAB_SUCCESS, tabName));
+}
+----
+
+If successfully executed, the command posts a new `SwitchTabRequestEvent`. This event is later handled in the `UI:MainWindow`:
+
+[source, java]
+----
+public void switchTab(int index) {
+    tabPane.getSelectionModel().select(index);
+}
+
+@Subscribe
+private void handleSwitchTabEvent(SwitchTabRequestEvent event) {
+    logger.info(LogsCenter.getEventHandlingLogMessage(event));
+    switchTab(event.targetIndex);
+}
+----
+
+Possible Future Implementations:
+
+* `switch` should be able to detect the current tab and switch without taking in any arguments.
+
+// end::switchtab[]
 
 
 // tag::sort[]
@@ -836,9 +1117,9 @@ The sort command is implemented to sort the current Resident book according to t
 * room
 * email
 
-It is important to note that after every other command such as `add`, `edit` or `delete`, the sort is run again to maintain the order of the list.
+By default, the list is sorted by name. It is important to note that after every other command such as `add`, `edit` or `delete`, the sort is run again to maintain the order of the list.
 
-If the list is already sorted by a particular field, trying to sort it by the same field will raise an exception:
+If the list is already sorted by a particular field, trying to sort it by the same field will raise an `AlreadySortedException`:
 [source,java]
 ----
 public void sortBy(String sortCriteria) throws AlreadySortedException {
@@ -851,7 +1132,7 @@ public void sortBy(String sortCriteria) throws AlreadySortedException {
 }
 ----
 
-This exception is later caught higher up the execution stack and the user receives a message that the list is already sorted by the field.
+This exception is later caught higher up the execution stack and a CommandException is thrown. The user receives a message that the list is already sorted by the field.
 
 To enable the sorting, standard `FXCollections.sort` is used. To enable this, ReadOnlyPerson interface extends Comparable.
 The person Class which implements this interface defines compareTo to compare two fields. The following is a snippet from the compareTo method:
@@ -875,12 +1156,34 @@ public int compareTo(Object otherPerson) {
 }
 ----
 
-The main things to note in this method is that the value "Not Set" will always be sorted away to the bottom of the list.
-Also, by default, the list is sorted by name.
+This compareTo method gives `Not Set` the least priority and hence if a list is sorted by a field (say `room`), the residents with rooms `Not Set` will appear at the bottom of the list.
+// end::sort[]
 
+// tag::removeTag[]
 === RemoveTag Command
 
-The RemoveTag command is implemented for fast removal of a tag from all entries in the address book. It is implemented by updating the tag list of entries.
+The RemoveTag command is implemented for fast removal of a tag from all entries in the address book. It is implemented by updating the tag list of Residents. +
+The motivation for implementing such a command is that the hostel/hotel administrator may need to mass delete a Tag from the person. For example, deleting the "RA" (Resident Assistant) tag when the old batch of RA steps down from operations.
+
+==== Design Considerations
+
+**Aspect:** Implementation of RemoveTag +
+**Alternative 1 (current choice):** Removes all tag from Residents holding it, by looking through the current ResidentBook  +
+**Pros:** Effective way, as it ensures that no one holds the tag after going through all Residents  +
+**Cons:** May take a longer time when running through all Residents if the ResidentBook has large amount of data +
+**Alternative 2:** Keep a list of Residents holding the Tag, and update it when necessary  +
+**Pros:** Efficient way, O(1) time in retrieving all Residents holding the Tag.  +
+**Cons:** Redundancy and overhead in keeping another list of Residents. Edit, Add, Delete commands will require additional checks to prevent outdated data.
+
+The current choice of design prevents unnecessary overhead in implementation, and is straightforward. While it may take a longer time in operation when handlinng large amount of data,
+it is understood that Residents population does not vary a lot. Since the number of rooms are fixed due to building design, it is safe to assume that all operations are able to complete within a reasonable amount of time.
+
+The following is the Sequence Diagram for RemoveTag command. The alias is "rm".
+
+image::SDforRemoveTagCommand.png[width="800"]
+
+[NOTE]
+The difference between the RemoveTag and DeleteByTag is that RemoveTag does not remove any Resident from the ResidentBook. It just removes all the specified tags attached to the Resident.
 
 The following shows the implementation method, where user will specify the tagName:
 [source,java]
@@ -890,20 +1193,63 @@ public RemoveTagCommand(String tagName) {
 }
 ----
 
+The following shows the core of RemoveTag command. It is essentially editing all Residents which holds the Tag specified by the user.
+[source,java]
+----
+private void updateTagList(List<ReadOnlyPerson> lastShownList, int i) throws CommandException {
+        ReadOnlyPerson personToEdit = lastShownList.get(i);
+        Person editedPerson = removedTagFromPerson(personToEdit);
+
+        try {
+            model.updatePerson(personToEdit, editedPerson);
+        } catch (PersonNotFoundException e) {
+            throw new CommandException(MESSAGE_REMOVE_TAG_ERROR);
+        } catch (DuplicatePersonException e) {
+            throw new CommandException(MESSAGE_REMOVE_TAG_ERROR);
+        }
+    }
+----
+
+This following section shows how the Tag specified is removed. It loops through the TagList each person has, and creates another set of updated TagList. While there will not be a duplication of tag, this defensive code ensures that indeed all specified tag is removed.
+[source,java]
+----
+private Person removedTagFromPerson(ReadOnlyPerson personToEdit) {
+        assert personToEdit != null;
+
+        Set<Tag> updatedTags = new HashSet<>();
+
+        for (Tag t : personToEdit.getTags()) {
+            if (t.tagName.equals(this.tagName)) {
+                continue;
+            } else {
+                updatedTags.add(t);
+            }
+        }
+
+        return new Person(personToEdit.getName(), personToEdit.getPhone(), personToEdit.getEmail(),
+                personToEdit.getRoom(), personToEdit.getTimestamp(), updatedTags);
+    }
+----
 [NOTE]
-If the tagName is invalid, there will be no exception raised or handled as a removal of invalid tagName essentially does not change the address book.
+If the tagName is invalid, the TagNotFoundException will be raised.
+
+// end::removeTag[]
 
 // tag::deletebytag[]
-=== Deletebytag Command
 
+=== Deletebytag Command
 The deletebybtag command allows users to delete residents in the addressbook that has a certain tag supplied. This command is implemented to enable the deletion of persons who have a particular tag.
 The motivation for implementing such a command is so that hostel/hotel administrators can mass delete a certain
 group of residents without going through the trouble of deleting them one by one.
 
 Only one argument is supplied with this command, a String `tag`.
 
+The sequence of steps carried out by this command is shown in the activity diagram below.
+
+image::deleteByTagAD.png[width="800"]
+
 [NOTE]
-Deletebytag command and Removetag command may sound similar, but they serve totally different purpose.
+Deletebytag command and RemoveTag command may sound similar, but they serve totally different purpose.
 
 
 The function to actually delete the persons who have the `TAG` supplied is done in the UniquePersonList class.
@@ -911,6 +1257,11 @@ The code belows shows it's execution. First we define an iterator to iterate thr
 The condition `if (p.getTags().contains(tag)` checks if each person has the `TAG` supplied.
 If it does, we remove the person from the list.
 
+The sequence diagram below shows the execution of the command.
+
+image::deleteByTagSD.png[width="800"]
+
+The `removeByTag(tag)` method is laid out below for better understanding.
 [source, java]
 public void removeByTag(Tag tag) throws CommandException {
     Iterator<Person> itr = this.iterator();
@@ -1047,15 +1398,14 @@ public void handleCalenderBoxPanelChange(EventBookChangedEvent event) {
 
 
 For navigation to the previous or next month in the calendar, a click on the "PREV" or "NEXT" button will trigger a method to repopulate the calendar with dates
- and events of the appropriate month.
+and events of the appropriate month. This can also be done through the CLI by typing `prev` or `next` at the command bar.
+The sequence diagram for `prev` command is shown below. `next` works in a similar way.
 
-[source, java]
-private void makeButtons(Button previousMonth, Button nextMonth) {
-    previousMonth.setOnAction(e -> previousMonth());
-    nextMonth.setOnAction(e -> nextMonth());
-}
+image::PrevCommandSD.png[width="800"]
 
-The inner working of `previousMonth()` is illustrated here. `nextMonth()` works in a similar way.
+
+The implementation of `previousMonth()` is illustrated here. `nextMonth()` works in a similar way.
+
 [source, java]
 private void previousMonth() {
     currentYearMonth = currentYearMonth.minusMonths(1);
@@ -1074,6 +1424,173 @@ private void previousMonth() {
 the username and password.
 
 // end::Calendar[]
+
+
+// tag::styling[]
+=== UI Styling
+
+The main styling for the `UI` can be found in `DarkTheme.css`. The document has been divided into the following sections:
+
+* `Base Styling`
+* `Tab and Tab Pane Styling`
+* `Split Pane and list CSS`
+* `Button Styling`
+* `Button Styling in Person Panel`
+* `Dialog Pane Styling`
+* `Scroll bar Styling`
+* `Card Pane Styling`
+* `Command Pane Styling`
+* `Person Panel Styling`
+
+Here, we look at a specific section of `DarkTheme.css`:
+
+[source,css]
+----
+/*PERSON PANEL STYLING*/
+#personPanel {
+    -fx-background-color: #232A34;
+    -fx-padding: 61 35 50 35;
+}
+
+#personDetailsBox {
+    -fx-padding: 20 20 20 20;
+    -fx-background-color: #404040;
+    -fx-text-color: white;
+}
+
+#personDetailsBox #name {
+    -fx-padding: 7, 0, 0, 0;
+}
+
+#name, #phone, #address, #email {
+    -fx-text-fill: white;
+}
+----
+
+We prefer modifying individual ids instead of an entire class of elements to keep the CSS modular. However, do note that for `.tab` and `.button`, class selectors have been used instead of id selectors to enforce a uniform looks for all buttons and tabs throughout the application.
+
+It is important to note that not all the styling properties are defined in `DarkTheme.css`. For example, the colors for the tags are defined in `PersonCard.java`:
+[source,java]
+----
+private static ArrayList<String> colors = new ArrayList<String>(Arrays.asList(
+        "#cc6600", "#cc0000", "#d11141", "#00b159", "#00aedb",
+        "#f37735", "#ffc425", "#a200ff", "#742323", "#757a25", "#237629",
+        "#2c2972", "#732474"));
+
+private static String getColorForTag(String tag) {
+    if (!tagColor.containsKey(tag)) {
+        String chosenColor = colors.get(random.nextInt(colors.size()));
+        tagColor.put(tag, chosenColor);
+    }
+    return tagColor.get(tag);
+}
+----
+
+==== Notes on changing styling:
+* Please refrain from using `!important` because it induces ambiguity and reduces modularity in the codebase
+* Use `ids` instead of `classes` as css selectors.
+* If the new UI Styling is drastically different from the current version, consider putting it in a new file and changing the loaded css to that instead of the current `DarkTheme.css`
+* Do not use `element.setStyle()` unless there is no way using CSS to achieve the same. Using such methods induces difficulty in tracking the source of the styling making it cumbersome to edit later.
+// end::styling[]
+
+
+// tag::eventbook[]
+=== Events and EventBook
+In version 1.4 and above, the application has been expanded to allow not only list of `Residents` but also of `Events`. The rationale behind is to allow the hostel management staff be aware of the events taking place in the hostel and make necessary preparations for the same. This section breifly explains the implementation of `Events` and the `EventBook` at four different levels: `Model` `Logic` `UI` and `Storage`
+
+==== Model
+At the model level, the `Event` class describes the behavior of an `Event` object. It has the following fields:
+
+* `Title`
+* `Location`
+* `Datetime`
+* `Description`
+
+Each of these fields have a class of their own within `seedu/room/model/event` and these classes contain the definitions and validations for each field. For example lets look at a snippet from `Datetime.java`:
+
+[source,java]
+----
+/**
+ * Returns true if a given string is a valid datetime in the format dd/mm/yyyy hhmm k or dd/mm/yyyy hhmm to hhmm.
+ */
+public static boolean isValidDatetime(String test) {
+    String[] components = test.split(" ");
+    String date = components[0];
+    String startTime = components[1];
+
+    //If the format is dd/mm/yyyy hhmm k
+    if (components.length == 3) {
+        String duration = components[2];
+        return isValidDate(date) && isValidTime(startTime) && isValidDuration(duration);
+    //If the format is dd/mm/yyyy hhmm to hhmm
+    } else if (components.length == 4) {
+        String endtime = components[3];
+        return isValidDate(date) && isValidTime(startTime) && isValidTime(endtime);
+    } else {
+        return false;
+    }
+}
+----
+
+This snippet shows how the application checks for invalid an `Datetime` when a user tries to add an event to the EventBook. Note that currently, the current implementation of `Datetime` disallows multi-day Events.
+
+It is important to note that two Event objects are considered equivalent (i.e .equals returns true) if their `Title`, `Location` and `Datetime` are the equivalent irregardless of whether the `Description` is the same or not. This is because a user may try to add an Event again if he/see forgets that it has already been added before. In such a senario, it is very unlikely that the `Description` for both the attempts to add the events will be the same but the `Title`, `Location` and `Datetime` would probably be the same.
+
+If an event is being added to the `EventBook` when an equivalent event already exists, a `DuplicateEventException` will be thrown by the `Model`
+
+
+`EventBook` implements a `ReadOnlyEventBook` and is responsible for maintaining the list of Events for the Logic and UI to query and update. The notable methods defined for `EventBook` are:
+
+* `setEvents(List<? extends ReadOnlyEvent> events)`
+* `resetData(ReadOnlyEventBook newData)`
+* `addEvent(ReadOnlyEvent e)`
+* `updateEvent(ReadOnlyEvent target, ReadOnlyEvent editedReadOnlyEvent)`
+* `removeEvent(ReadOnlyEvent key)`
+* `sortBy(String sortCriteria)`
+* `getEventList()`
+
+Some important things to note about `EventBook`:
+
+* By default, the events are sorted by `Title`
+* Querying for events may throw a `EventNotFoundException` and adding events may throw a `DuplicateEventException`
+
+Possible Future Implementations:
+
+* Implement a better sort for `Events`. Although they can be sorted by * `Title`, `Location`, `Datetime` and `Description`, a user would like to see upcoming events first. So, a possible sort criteria would be `Number of days until the Event`. So, the upcoming events would be at the top of the list and the past ones and others much later in the future would be further down.
+
+
+==== Logic
+At the logic level, there are two commands which allow addition and deletion of events:
+
+* Add Event Command: `addevent` or `ae`
+* Delete Event Command: `deleteevent` or `de`
+
+Both these commands follow the general implementations of an `Undoable Command`. For more details look at their respective sections in the Developer Guide: link:DeveloperGuide.adoc[addEvent] link:DeveloperGuide.adoc[deleteEvent]
+
+==== Storage
+The implementation of EventBook storage follows the ResidentBook storage closely. The main methods defined by the `EventBookStorage` interface are:
+
+* `getEventBookFilePath()`
+* `readEventBook()`
+* `readEventBook(String filePath)`
+* `saveEventBook(ReadOnlyEventBook eventBook)`
+* `saveEventBook(ReadOnlyEventBook eventBook, String filePath)`
+* `backupEventBook(ReadOnlyEventBook eventBook)`
+
+The EventBook is stored in an xml file at `data/eventbook.xml` using a `XmlSerializableEventBook` object. When the application is started, the contents of this xml file are read and passed to the Model. If there is no such file found, sample data is read from `SampleDataUtil` and the xml file is only created if any events are added or deleted from this sample data.
+
+==== UI
+The `EventBook` is displayed to the user as an `EventCard` in an `EventListPanel`. The `EventCard` displays all the necessary information about the event such as the title, date, time, location and description.
+
+To display this data in presentable manner and not clutter the UI of the application, a `TabPane` is used. A `TabPane` allows users to switch between the Residents List and the Events List. To switch between the tabs, a user can either use the `Switch Tab` command or a mouse click on either of the `Tabs`
+
+Possible Future Implementations:
+
+* Remove unnecessary details such as `Description` from the `EventCard`.
+* Allow `EventCards` to be selectable so that when selected, a Panel with all the details about the events is displayed
+* Allow the Calendar to be clickable and selectable so that when a day is selected, the Events for the day are displayed.
+
+// end::eventbook[]
 
 == Documentation
 
@@ -1516,8 +2033,41 @@ Use case resumes at step 2
 +
 Use case ends
 
+[discrete]
+== Use case: Import storage files
+
+*MSS*
+
+1. User requests to import external XML file
+2. System requests for file location
+3. User provides file location
+4. System loads file and shows success message, along with the updated list
+Use case ends.
+
+*Extensions*
+
+* 1a. System detects there is no file location specified
+
+** 1a1. System outputs message saying that the input location is incorrect
+Use case ends.
+
+* 3a. System detects an invalid file location or finds invalid XML file
+
+** 3a1. System asks for a new file location
+
+** Steps 3 is repeated until a valid file location is entered
+
+Use cases resumes at step 4
+
+* 3b. System detects not enough storage on hard drive
+
+** 3b1. System tells user not enough space on hard drive
+
+Use case ends.
+
 
 [discrete]
+// tag::backupUseCase[]
 == Use case: Backup storage files
 
 *MSS*
@@ -1549,6 +2099,7 @@ Use cases resumes at step 4
 
 Use case ends.
 
+// end::backupUseCase[]
 
 [discrete]
 == Use case: View and delete obsolete contacts
