--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -80,28 +80,42 @@ image::autocomplete.png[width="400"]
 
 // end::autocomplete[]
 
-// tag::addevent[]
+// tag::addEvent[]
 === Adding a event: `addEvent`
 
 Adds a event to the event book +
 Format: `addEvent ti/TITLE des/DESCRIPTION loc/LOCATION time/DATETIME`
 
+[TIP]
+The event cannot be longer than one day
+
 Examples:
 
-* addevent ti/End of Sem Dinner des/Organised by USC loc/Cinnamon College time/25/11/2017 2030 2
-* addevent ti/USPolymath des/Intellectual Talks loc/Chatterbox time/25/11/17 2030 to 2230
-* ae ti/End of Sem Dinner des/Organised by USC loc/Cinnamon College time/25/11/17 2030 2
+* `addevent ti/End of Sem Dinner des/Organised by USC loc/Cinnamon College time/25/11/2017 1630 2`
+* `addevent ti/USPolymath des/Intellectual Talks loc/Chatterbox time/27/09/2017 1830 to 2230`
+* `ae ti/Orientation Day 1 des/Games loc/MBS time/30/12/2017 0830 10`
 
-// tag::deleteevent[]
+// end::addEvent[]
+
+
+// tag::deleteEvent[]
 === Deleting a event: `deleteEvent`
 
 Deletes an event from the event book +
 Format: `deleteEvent <index>`
 
+****
+* Deletes the event at the specified `INDEX`.
+* The index refers to the index number shown in the most recent event list.
+* The index *must be a positive integer* 1, 2, 3, ...
+****
+
 Examples:
 
-* deleteEvent 5
-* de 10
+* `deleteEvent 5`
+* `de 10`
+
+// end::deleteEvent[]
 
 
 === Adding a person: `add`
@@ -111,6 +125,9 @@ Format: `add n/NAME p/PHONE_NUMBER e/EMAIL a/ROOM [t/TAG]...`
 
 [TIP]
 A person can have any number of tags (including 0)
+
+[TIP]
+Only the name field is mandatory
 
 Examples:
 
@@ -132,14 +149,16 @@ realised a certain temporary resident stills remains in your address book after 
 ===============
 
 
-Example of temporary resident that stays for 2 days:
+Example of temporary resident that stays for 1 days:
 
-* `add n/Betsy Crowe t/friend e/betsycrowe@example.com r/09-109 p/1234567 temp/2 t/guest t/tour t/student` +
+* `add n/James Bond e/Jamesbond@example.com r/09-100 p/98765432 temp/1 t/hero` +
+
+image::TempPersonMessage.png[width="800"]
 
 // end::temporaryperson[]
 
 // tag::picture[]
-=== Adding a picture: addImage
+=== Adding a picture: `addImage`
 
 Adds an image to a resident in the resident book as specified by the current index +
 Format: `addImage INDEX url/IMAGE_URL`
@@ -160,7 +179,7 @@ Examples:
 
 image::add_person.png[width="400"]
 
-=== Deleting a picture: deleteImage
+=== Deleting a picture: `deleteImage`
 
 Deletes an image to a resident in the resident book as specified by the current index +
 Format: `deleteImage INDEX`
@@ -203,6 +222,7 @@ Only `highlight -` will remove highlighting, highlighting invalid tags would onl
 error message in the message box
 
 Examples:
+
 * `highlight owesmoney`
 * `highlight -` - Clears current highlighting
 
@@ -220,8 +240,31 @@ Format: `swaproom `index` `index``
 The command `swaproom 1 2` and `swaproom 2 1` are equivalent
 
 Examples:
+
 * `swaproom 1 2`
 * `swaproom 3 5`
+// end::swaproom[]
+
+
+// tag::switchtab[]
+=== Switch. Tab: `switch`
+
+Switches between Residents List and Events List
+Format: `switch `tab-number``
+
+****
+* Switches to the tab that `tab-number` corresponds to.
+* The `tab-number` 1 refers to Residents List and 2 refers to Events List
+* The `tab-number` *must be a either 1 or 2*
+****
+
+Examples:
+
+* `switch 1`
+* `switch 2`
+* `sw 1`
+
+// end::switchtab[]
 
 === Listing all persons : `list`
 
@@ -234,6 +277,11 @@ Format: `list`
 Sorts the resident book +
 Format: `sort `sorting-criteria``
 
+****
+* Sorts the residents list by the `sorting-criteria`.
+* The `sorting-criteria` *must be one of the following: `name`, `room`, `phone` and `email`*
+****
+
 
 Examples:
 
@@ -241,6 +289,8 @@ Examples:
 * `sort room`
 * `sort phone`
 * `sort email`
+
+// end::sort[]
 
 === Editing a person : `edit`
 
@@ -322,6 +372,8 @@ Examples:
 * `deletebytag friend` will delete all persons who have a tag of `friend`
 
 * If Alice has tags "RA" and "CollegeMaster", `deletebytag RA` will erase Alice from the ResidentBook.
+
+image::deletebytagMessage.png[width='800']
 
 // end::deletebytag[]
 
@@ -420,14 +472,22 @@ Format: `exit`
 Resident book data are saved in the hard disk automatically after any command that changes the data. +
 There is no need to save manually.
 
-=== Back up of data : `backup`
+// tag::backup[]
+=== Back up of data : `backup` (since v1.3)
 
-Resident book data can be stored in a back up file when necessary. This is good in case any the existing resident book is corrupted. +
+Resident book data can be stored in a back up file when necessary. This function is not undoable. Please ensure that previous backups are truly deprecated.
+
+This command is good in case any the existing resident book is corrupted, or when the semester is over. +
 Format: `backup`
 
-=== Import data : `import` (Since v1.2)
+image::backup.png[width='800']
 
-Add contact details from external xml file into current resident book. This can be done through typing commands or selecting from the UI.+
+// end::backup[]
+
+// tag::import[]
+=== Import data : `import` (Since v1.4)
+
+The import command helps to integerate Resident details from an external XML file with the current ResidenkBook details. This function can be done through typing through CLI or selecting from the UI. It is an undoable function. +
 Format: import FILE_PATH
 
 ****
@@ -438,30 +498,39 @@ Format: import FILE_PATH
 Examples:
 
 * `import C:\Desktop\exchangeStudents.xml` +
-Imports colleagues.xml into current resident book.
+Imports exchangeStudents.xml into current resident book.
 
-Through the UI:
-image::ui_import.png[width="400"]
+It can be done through the Ui as well.
 
+image::import_file_Ui.png[width='800']
+
+// end::import[]
+
+// tag::removeTag[]
 === Remove all Tags with specified name : `rm` (Since v1.3)
 
 This function is useful to remove all deprecated tags. For example, when all residents have moved in, all the tags can be removed as "Pending". +
-Format: rm TAG_NAME
+Format: `removeTag TAG` +
+Command Alias: `rm`
 
-****
-* The TAG_NAME must be present in the Resident Book.
-****
+[NOTE]
+The TAG_NAME specified must exist in the current ResidentBook. If it does not exist, exception will be thrown and user will be notified that not such tag exist.
+The following shows an example when invalid tag is provided.
 
 Examples:
 
 * `rm pending` +
 Remove all "pending" tags from list of residents.
 
-=== Facebook Search (coming in v2.0)
+* If Amy has tags "RA" and "CollegeMaster", `removeTag RA` will remove tag from Amy, retaining her other details in the ResidentBook.
 
-Query Facebook using list of emails from resident book.
+
+image::removeTagCommand_error.png[width='800']
+
+// end::removeTag[]
 
 // tag::personPanel[]
+
 === Person Panel (since v1.4)
 
 Person Panel has been introduced to allow additional information of residents to be displayed.
@@ -476,11 +545,17 @@ image::personPanel.png[width="500"]
 === Calendar Interface (Since v1.4)
 
 Calendar has been introduced to allow the hostel administrator to view events happening in the hostel.
-Events can be seen on calendar interface for clearer view since v1.5
+Events can be seen on calendar interface since v1.5
 
 image::Calendar_UI.png[width="790"]
 
-* Click on the "PREV" or "NEXT" button to navigate to the previous or next month.
+[NOTE]
+
+To go to previous or next month, type
+`prev` or `next`. +
+Refer to the next section for details of each command.
+
+* User can also click on the "PREV" or "NEXT" button to navigate to the previous or next month.
 
 * Event names are truncated on the calendar to allow uniform calendar grid size. +
 
@@ -501,11 +576,24 @@ Example:
 
 image::Day_Events.png[width="300"]
 
+
+=== View previous or next month on calendar: `prev` or `next`
+Format: `prev` +
+Format: `next`
+
+This command allows users to view events taking place in the previous month, or in the next month. +
+If the current month is November and a user types `prev`, calendar will show October's events. Typing `prev` will bring
+the user to September; otherwise if the user types `next`, calendar will show December's events.
+
+An example of navigating to the previous month (from November) is shown below.
+
+image::PrevCommand.png[width="800"]
+
 // end::Calendar[]
 
 === Events (Since v1.4)
 
-Events can be managed through the Resident book. It supports add, remove and edit functions.
+Events can be managed through the Resident book. It supports add and delete functions.
 
 == FAQ
 
@@ -516,9 +604,13 @@ Events can be managed through the Resident book. It supports add, remove and edi
 
 * *Add* `add n/NAME p/PHONE_NUMBER e/EMAIL r/ROOM [t/TAG]...` +
 e.g. `add n/James Ho p/22224444 e/jamesho@example.com r/12-100 t/friend t/colleague`
+* *Add Event* `addevent ti/TITLE des/DESCRIPTION loc/LOCATION time/STARTTIME TO ENDTIME` +
+e.g. `addevent ti/End of Sem Dinner des/Organised by USC loc/Cinnamon College time/25/11/2017 2030 to 2359`
 * *Clear* : `clear`
 * *Delete* : `delete INDEX` +
 e.g. `delete 3`
+* *Delete Event* : `deleteEvent INDEX` +
+e.g. `deleteEvent 3`
 * *Edit* : `edit INDEX [n/NAME] [p/PHONE_NUMBER] [e/EMAIL] [r/ROOM] [t/TAG]...` +
 e.g. `edit 2 n/James Lee e/jameslee@example.com`
 * *Find* : `find KEYWORD [MORE_KEYWORDS]` +
@@ -531,3 +623,15 @@ e.g.`select 2`
 * *Undo* : `undo`
 * *Redo* : `redo`
 * *Backup* : `backup`
+* *Import* : `import FILE_PATH` +
+e.g. `import C:\Documents\exchangeStudent.xml`
+* *RemoveTag : `removeTag TAG` or `rm TAG` +
+e.g. `removeTag RA`
+* *Delete by tag*: `deletebytag TAG` +
+e.g. `deletebytag RA`
+* *Switch Tab* : `switch `tab-number`` +
+e.g. `switch 1`
+* *Swap Rooms* : `swaproom INDEX INDEX` +
+e.g. `swaproom 3 2`
+* *Previous Month*: `prev`
+* *Next Month*: `next`
